# quantum-xyz

./: .gitignore  .readthedocs.yaml  Exp.py  README  README.md  Test.py  compare_runtime.py  exp.py  exp_qubits.py  main.py  pyproject.toml  qsp_dataset.tar  requirements.txt  resynthesis.csv  search_graph.dot  setup.py  synthesis.csv  synthesis_3.csv  synthesis_5.csv  synthesis_7_20230829-195112.csv  test.py  tmp.py
.github/workflows/: cd.yml  ci.yml  deploy.yml  pylint.yml  python-checks.yaml
Algorithms/: CofactorDecomposition.py  Decomposition.py  ShannonDecomposition.py  __init__.py
Algorithms/Decompose/: BGMatrix.py  MCRY.py  MCRZ.py  Muxiplier.py  ZYZ.py  __init__.py
Algorithms/Simulate/: Sim.py  __init__.py
Algorithms/Solver/: CNRY.py  __init__.py
Algorithms/Synthesis/: GrayCode.py  MultiControl.py  SearchBasedStateSynthesis.py  SparseStateSynthesis.py  StateSynthesisBase.py  __init__.py
Circuit/: QBit.py  QCircuit.py  QCircuitBase.py  QCircuitMapping.py  QCircuitOptimized.py  QCircuitQiskitCompatible.py  QGate.py  __init__.py
Circuit/Gates/: MULTIPLEXY.py  __init__.py  cry.py  cx.py  mcry.py  ry.py  x.py  z.py
Circuit/Operators/: MCRYOperator.py  MultiControlledOperator.py  QOperator.py  QOperatorBase.py  QuantizedRotation.py  RYOperator.py  __init__.py
Experimental/: W.py  __init__.py
QuantumXYZ/: __init__.py
StatePreparator/: D.py  FwPreparator.py  GHZ.py  GhzPreparator.py  UniformStatePreparator.py  __init__.py
Tests/: CofactorDecompositionTest.py  MCRYGateTest.py  MCRYTest.py  MCRZTest.py  MultiControlTest.py  MuxiplierTest.py  ShannonDecompositionTest.py  ZYZTest.py  __init__.py
Util/: __init__.py
Utils/: __init__.py
Visualization/: __init__.py
benchmarks/: dicke_10.qasm  dicke_3.qasm  dicke_4.qasm  dicke_5.qasm  dicke_5_1.qasm  dicke_5_2.qasm  dicke_6.qasm  dicke_6_1.qasm  dicke_6_2.qasm  dicke_6_3.qasm  dicke_7.qasm  dicke_8.qasm  dicke_9.qasm
cxyz/: __init__.py  interface.py
docs/: Algorithms.Decompose.rst  Algorithms.Simulate.rst  Algorithms.Synthesis.CnRySynthesis.Detail.rst  Algorithms.Synthesis.CnRySynthesis.rst  Algorithms.Synthesis.rst  Algorithms.rst  Circuit.Gates.Base.rst  Circuit.Gates.rst  Circuit.Operators.QState.PureState.rst  Circuit.Operators.QState.rst  Circuit.Operators.rst  Circuit.Qiskit.rst  Circuit.rst  Exp.rst  Experimental.rst  QuantumXYZ.Algorithms.Decompose.rst  QuantumXYZ.Algorithms.Simulate.rst  QuantumXYZ.Algorithms.Synthesis.CnRySynthesis.Detail.rst  QuantumXYZ.Algorithms.Synthesis.CnRySynthesis.rst  QuantumXYZ.Algorithms.Synthesis.rst  QuantumXYZ.Algorithms.rst  QuantumXYZ.Circuit.Gates.Base.rst  QuantumXYZ.Circuit.Gates.rst  QuantumXYZ.Circuit.Operators.QState.PureState.rst  QuantumXYZ.Circuit.Operators.QState.rst  QuantumXYZ.Circuit.Operators.rst  QuantumXYZ.Circuit.Qiskit.rst  QuantumXYZ.Circuit.rst  QuantumXYZ.StatePreparator.State.rst  QuantumXYZ.StatePreparator.StateOp.rst  QuantumXYZ.StatePreparator.rst  QuantumXYZ.Utils.Bdd.rst  QuantumXYZ.Utils.Operator.rst  QuantumXYZ.Utils.Profiling.rst  QuantumXYZ.Utils.Synthesis.rst  QuantumXYZ.Utils.rst  QuantumXYZ.Visualization.Cube.rst  QuantumXYZ.Visualization.rst  QuantumXYZ.rst  StatePreparator.State.rst  (+28 more)
example/: README.md  balancing.py  prepare_random_state.py  resynthesize_circuit.py  resynthesize_toy.py  run_simulation.py  sparse_state_synthesis.py  synthesis.py  synthesize_dicke.py  synthesize_qba.py  synthesize_w.py  window_resynthesis.py
static/: data_m.csv  data_sota.csv  data_sparse.csv  data_time_sparse.csv  ex-qubit-exact.csv  exp-nm.py  exp-rand-state.py  plot_runtime.py  plot_runtime_camera_ready.py  runtime_bak.csv  synthesis.py
tests/: 2023-09-12 01:24:34.json  2023-09-12 01:26:08.json  2023-09-12 01:27:25.json  2023-09-12 01:27:53.json  2023-09-12 01:31:21.json  2023-09-12 01:31:36.json  2023-09-12 02:04:31.json  2023-09-12 02:04:54.json  2023-09-12 02:33:16.json  arithematic.py  canonicalization.py  data.csv  data_bak.csv  data_sparse.csv  data_sparse_mapped.csv  debug.py  example.py  exp.py  factoring.py  helper.py  mapping.py  plot.py  precompute.py  qubit_reduction.py  regression_tests.py  sparse_state_synthesis.py  stabilizer_search.py  synthesis.py  test.py  tt_to_sop.py
tools/: formatter.py
xyz/: __init__.py  qclib.py
xyz/cxyz/: CMakeLists.txt  __init__.py  interface.py
xyz/cxyz/bindings/: CMakeLists.txt  xyz.cpp
xyz/cxyz/include/: qcircuit.hpp  qgate.hpp
xyz/cxyz/lib/: prepare_state.cpp  qcircuit.cpp
xyz/cxyz/lib/qgate/: CMakeLists.txt  c.cpp  cry.cpp  cx.cpp  r.cpp  ry.cpp  x.cpp
xyz/cxyz/tests/: CMakeLists.txt  qgates.cpp
(+719 files in other folders)
